* Mon Dec 5 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- Change GRIDHTTP_ONETIME to GRIDHTTP_PASSCODE 
- Remove onetime=yes default from mod_gridsite
* Wed Nov 16 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- ==== GridSite version 1.1.16 ====
* Wed Nov 16 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- Add -fPIC option to Makefile for IA64, as suggested
  by Andreas Unterkircher.
* Wed Oct 12 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- ==== GridSite version 1.1.15 ====
* Wed Oct 12 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- Fix for older OpenSSL to grst_x509.c from
  Zoltan.Farkas <Zoltan.Farkas@cern.ch>
* Wed Oct 12 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- ==== GridSite version 1.1.14 ====
* Tue Oct 11 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- Modify VOMS AC parsing to handle multiple ACs inside
  the same X.509 AC extension.
* Mon Oct 10 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- ==== GridSite version 1.1.13 ====
* Mon Oct 10 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- Add target_gname patch to gsexec from
  Gerben Venekamp <venekamp@nikhef.nl>
* Thu Oct 6 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- Fix session reuse with Shared-Memory SSL Session
  Cache bug #8856 in mod_gridsite.
- Add SiteCast support to file copying in htcp.
* Tue Oct 4 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- Move User, Config, Admin and Install guides from 
  doc directory into GridSite Wiki.
- Create/update man pages for htcp, mod_gridsite and
  gsexec to be distributed with source/binaries.
* Mon Oct 3 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- Fix to gsexec GRST_CRED_0/SSL_CLIENT_S_DN bug found
  by Ian Stokes-Rees <i.stokes-rees1@PHYSICS.OX.AC.UK>
* Fri Sep 30 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- Add SiteCast ping (NOP) support to htcp
* Thu Sep 29 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- Add SiteCast support to mod_gridsite (file location
  discovery via UDP multicast of HTCP messages.)
* Wed Sep 21 2005 Andrew McNab <Andrew.McNab@man.ac.uk>