@@ -1,6 +1,7 @@
 * Mon Dec 5 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
 - Change GRIDHTTP_ONETIME to GRIDHTTP_PASSCODE 
 - Remove onetime=yes default from mod_gridsite
+- Update gridsite.spec and Makefile for gridsite-copy.cgi
 * Wed Nov 16 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
 - ==== GridSite version 1.1.16 ====
 * Wed Nov 16 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
